Update send message icon to email icon

--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                     <span class="error-message">Please enter a message</span>
                 </div>
                 <button type="submit" class="btn btn-primary">
-                    <i class="fas fa-paper-plane"></i> Send Message
+                    <i class="fas fa-envelope"></i> Send Message
                 </button>
             </form>
 
